Feature(SettingInput) CustomSlider 버튼 추가, 시프트 버튼 추가, Feature(CustomCard) 탭 별 설정 완성, 수정 모드 추가, Fix(Page) 페이지 전체 레이아웃 스타일 수정

--- a/src/app/rc-slider.css
+++ b/src/app/rc-slider.css
@@ -93,13 +93,13 @@
 .rc-slider-mark-text {
   position: absolute;
   display: inline-block;
-  color: #999;
+  color: var(--tw-bg);
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
 }
 .rc-slider-mark-text-active {
-  color: #666;
+  color: var(--tw-bg);
 }
 .rc-slider-step {
   position: absolute;
