--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,27 @@
   .text-balance {
     text-wrap: balance;
   }
+
+  .scroll-smooth {
+    &::-webkit-scrollbar {
+      width: 6px;
+      height: 6px;
+    }
+    &::-webkit-scrollbar-track {
+      border-radius: 10px;
+      background: rgba(0, 0, 0, 0.1);
+    }
+    &::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      background: rgba(0, 0, 0, 0.2);
+    }
+    &::-webkit-scrollbar-thumb:hover {
+      background: rgba(0, 0, 0, 0.4);
+    }
+    &::-webkit-scrollbar-thumb:active {
+      background: rgba(0, 0, 0, 0.9);
+    }
+  }
 }
 
 @import './rc-slider.css';
