--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 @plugin "daisyui" {
-  themes: light --default, dark --prefersdark, retro, dracula;
+  themes: light --default, dark --prefersdark, nord, dark;
 }
 
 @layer utilities {
